try to fix missing background

--- a/commons-booking/admin/assets/sass/admin.scss
+++ b/commons-booking/admin/assets/sass/admin.scss
@@ -62,3 +62,17 @@
 		display: block;
 	}
 }
+
+/* dirty fix for missing background in time picker */
+
+.ui-datepicker-header {
+  background: red !important;
+	
+}
+
+#ui-datepicker-div {
+	div {
+		color: red;
+  background: red !important;
+  }
+}
